--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "check": "prettier --write . && biome check --write ."
   },
   "dependencies": {
-    "@astrojs/check": "^0.9.3",
-    "@astrojs/node": "^8.3.3",
-    "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/check": "^0.9.4",
+    "@astrojs/node": "^8.3.4",
+    "@astrojs/tailwind": "^5.1.1",
     "@fastify/basic-auth": "^5.1.1",
     "@fastify/compress": "^7.0.3",
     "@fastify/middie": "^9.0.2",
@@ -27,7 +27,7 @@
     "@mercuryworkshop/wisp-js": "^0.3.2",
     "@titaniumnetwork-dev/ultraviolet": "^3.2.7",
     "astro": "^4.15.11",
-    "fastify": "^4.28.1",
+    "fastify": "^5.0.0",
     "lucide-astro": "^0.447.0",
     "mime": "^4.0.4",
     "sharp": "^0.33.5",
@@ -41,5 +41,13 @@
     "@types/node": "^22.7.4",
     "prettier": "^3.3.3",
     "prettier-plugin-astro": "^0.14.1"
+  },
+  "pnpm": {
+    "overrides": {
+      "cookie": "^0.7.0"
+    }
+  },
+  "resolutions": {
+    "cookie": "^0.7.0"
   }
 }
